Corrected form field width, improved color alternating in dark mode

--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -1,5 +1,8 @@
 #gga-settings.gga {
-  gap: 0;
+  .form-fields > * {
+    flex: 0 1 auto;
+    width: fit-content;
+  }
 }
 
 .gga .gga-settings {
@@ -9,19 +12,12 @@
   row-gap: 1rem;
 
   .settings-list {
-    background: unset;
-    overflow-y: scroll;
-
     .form-group {
       gap: 0;
     }
 
-    &>div {
+    & > div {
       padding: 0.5rem;
-    }
-
-    &>div:nth-child(odd) {
-      background-color: rgb(0, 0, 0, 5%);
     }
 
     label {
@@ -47,3 +43,14 @@
     }
   }
 }
+
+// Darken every other field in light mode
+.theme-light .gga-settings .settings-list > div:nth-child(odd) {
+  background-color: rgb(0, 0, 0, 5%);
+}
+
+// Lighten every other field in dark mode
+.theme-dark .gga-settings .settings-list > div:nth-child(odd) {
+  background-color: rgb(255, 255, 255, 5%);
+}
+
